# MYSTIC

./: .gitignore  COMPLETION_SUMMARY.txt  DEPLOYMENT_READINESS.md  ENHANCED_GAP_ANALYSIS_WITH_NINE65.md  GAP_ANALYSIS_REPORT.md  GAP_RESOLUTION_REPORT.md  INNOVATION_RESOURCE_INDEX.md  INTEGRATION_PLAN.md  LICENSE  MYSTIC_QMNF_Comprehensive_Technical_Dossier.md  NINE65_CODEX_REFERENCE.md  NINE65_INTEGRATION_AUDIT.md  OPERATIONAL_RUNBOOK.md  PROJECT_COMPLETION_SUMMARY.md  QMNF_INNOVATIONS_VALIDATION_REPORT.md  README.md  SECURITY.md  SYSTEM_STATUS_REPORT.md  TESTING_REPORT.md  attractor_detector.py  cayley_transform.py  cayley_transform_nxn.py  data_sources.py  data_sources_extended.py  deployment_health_report.json  deployment_startup.py  fibonacci_phi_validator.py  final_accuracy_validation.py  gap_analysis.md  historical_data_loader.py  historical_validation.py  k_elimination.py  leader_benchmark.py  leader_benchmark_report.json  liouville_evolver.py  lyapunov_calculator.py  mathematical_gap_analysis.md  minimal_validation_check_fixed.py  mobius_int.py  multi_variable_analyzer.py  (+28 more)
nine65_v2_complete/: Cargo.toml  INDEX.md  README.md  WHAT_YOU_NEED.md
nine65_v2_complete/audit/: benchmark_results.txt
nine65_v2_complete/benches/: criterion_fhe.rs  fhe_benchmarks.rs  grover_noise_search.rs  noise_bench.rs
nine65_v2_complete/data/: basin_statistics.json  camp_mystic_2007_synthetic.csv  compound_harvey_tide.json  detection_gap_analysis.json  enhanced_validation_results.json  ensemble_uncertainty.json  fhe_encrypted_detection.json  final_optimization_summary.json  final_validation_summary.json  flash_flood_predictions.json  flood_attractor_training.json  harvey_rapid_intensification.json  historical_disaster_database.json  historical_validation_results.json  historical_validation_v2_report.txt  joplin_tornado_detection.json  nexrad_camp_mystic_simulated.json  omniscient_data_summary.json  oneshot_flood_model.json  optimization_cycle_complete.json  optimized_detection_v2.json  regional_calibration.json  (+13 more)
(+189 files in other folders)
